# 2wave

./: LICENSE  README.md  model.py  pyproject.toml  requirements.txt  test_twowave.py  twowave.py
.github/workflows/: build.yml
